attach NLB to the API server by default
Signed-off-by: Martin Linkhorst <martin.linkhorst@zalando.de>

--- a/cluster/config-defaults.yaml
+++ b/cluster/config-defaults.yaml
@@ -266,7 +266,7 @@ apiserver_proxy: "true"
 #   promoted:    NLB will be fully functional and ELB will be unhooked
 #   exclusive:   NLB will be fully functional and ELB will be removed
 #
-apiserver_nlb: "disabled"
+apiserver_nlb: "hooked"
 
 # when set to true, service account tokens can be used from outside the cluster
 # requires apiserver_proxy to be set to "true"
